--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -29,3 +29,27 @@
   margin: auto;
   margin-top: 40px;
 }
+
+#ab1{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+#ab2{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+#ab3{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 30px;
+}
+
+#ab4{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
