--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -80,11 +80,12 @@
   align-items: center;
   flex-direction: column;
   gap: 10px;
+  height: auto;
 }
 
 #page button{
-  padding: 20px;
-  width: 250px;
+  padding: 15px;
+  width: 210px;
   border-radius: 40px;
   font-size: 20px;
   color: black;
