--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -67,20 +67,16 @@
 }
 
 
-#admin{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-}
+
 
 #page{
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
   height: auto;
+  margin-bottom: 50px;
 }
 
 #page button{
@@ -90,4 +86,15 @@
   font-size: 20px;
   color: black;
   font-weight: bold;
+}
+
+
+#pagedata{
+ margin: auto;
+ width: 50%;
+}
+
+#AddProduct{
+  box-shadow: 0px 0px 9px;
+  padding: 40px;
 }
