--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -114,5 +114,9 @@
 }
 
 #cusdata{
-  margin-left: 500px;
+  margin-left: 550px;
+  border: 1px solid black;
+  background-color: rgb(232, 231, 236);
+  width: 400px;
+  padding: 40px;
 }
