--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -118,3 +118,279 @@
   width: 400px;
   padding: 40px;
 }
+
+/* tablet view */
+
+@media screen and (max-width:768px){
+  #nav{
+    font-weight: bold;
+    color: black;
+    /* width: 100%; */
+  }
+  
+  
+  #cards{
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 40px;
+    gap: 40px;
+    margin-left: 150px;
+  }
+  
+  #star{
+    display: flex;
+    justify-content: space-between;
+    /* flex-direction: column; */
+  }
+  
+  
+  #star1{
+    display: flex;
+    color: black;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #from{
+    width: 50%;
+    margin: auto;
+    margin-top: 40px;
+    box-shadow: 0px 0px 9px;
+    padding: 30px;
+  }
+  
+  #ab1{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    flex-direction: column;
+  }
+  
+  #ab2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    flex-direction: column;
+
+  }
+  
+  #ab3{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    flex-direction: column;
+
+  }
+  
+  #ab4{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    flex-direction: column;
+
+  }
+  
+  #icon{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+    font-size: 20px;
+    padding-right: 40px;
+  
+  }
+  
+  
+  
+  
+  #page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+    height: auto;
+    margin-bottom: 50px;
+  }
+  
+  #page button{
+    padding: 12px;
+    width: 210px;
+    border-radius: 40px;
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+  }
+  
+  
+  #pagedata{
+   margin: auto;
+   width: 50%;
+  }
+  
+  #AddProduct{
+    box-shadow: 0px 0px 9px;
+    padding: 40px;
+    border: 1px solid black;
+    margin-bottom: 30px;
+    border-radius: 20px;
+  }
+  
+  #table{
+    width: 700px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 360px;
+  }
+  
+  #cusdata{
+    margin-left: 550px;
+    border: 1px solid black;
+    background-color: rgb(232, 231, 236);
+    width: 400px;
+    padding: 40px;
+  }
+  #mar{
+    width: 760px;
+  }
+}
+
+/* mobile view */
+@media screen and(max-width:425px){
+  #nav{
+    font-weight: bold;
+    color: black;
+    /* width: 100%; */
+  }
+  
+  
+  #cards{
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 20px;
+    gap: 40px;
+    margin-left: 90px;
+  }
+  
+  #star{
+    display: flex;
+    justify-content: space-between;
+    /* flex-direction: column; */
+  }
+  
+  
+  #star1{
+    display: flex;
+    color: black;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #from{
+    width: 50%;
+    margin: auto;
+    margin-top: 40px;
+    box-shadow: 0px 0px 9px;
+    padding: 30px;
+  }
+  
+  #ab1{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    flex-direction: column;
+  }
+  
+  #ab2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    flex-direction: column;
+
+  }
+  
+  #ab3{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    flex-direction: column;
+
+  }
+  
+  #ab4{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    flex-direction: column;
+
+  }
+  
+  #icon{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+    font-size: 20px;
+    padding-right: 40px;
+  
+  }
+  
+  
+  
+  
+  #page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+    height: auto;
+    margin-bottom: 50px;
+  }
+  
+  #page button{
+    padding: 12px;
+    width: 150px;
+    border-radius: 40px;
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+  }
+  
+  
+  #pagedata{
+   margin: auto;
+   width: 50%;
+  }
+  
+  #AddProduct{
+    box-shadow: 0px 0px 9px;
+    padding: 40px;
+    border: 1px solid black;
+    margin-bottom: 30px;
+    border-radius: 20px;
+  }
+  
+  #table{
+    width: 700px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 360px;
+  }
+  
+  #cusdata{
+    margin-left: 550px;
+    border: 1px solid black;
+    background-color: rgb(232, 231, 236);
+    width: 400px;
+    padding: 40px;
+  }
+  #mar{
+    width: 300px;
+    display: none;
+  }
+
+
+}
