--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -344,14 +344,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     gap: 10px;
     height: auto;
     margin-bottom: 50px;
+    overflow-x: scroll;
+    overflow-y: scroll;
   }
   
   #page button{
-    padding: 12px;
+    padding: 6px;
     width: 150px;
     border-radius: 40px;
     font-size: 20px;
