--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -119,6 +119,10 @@
   padding: 40px;
 }
 
+#order{
+  padding-right: 400px;
+}
+
 /* tablet view */
 
 @media screen and (max-width:768px){
@@ -142,7 +146,11 @@
     justify-content: space-between;
     /* flex-direction: column; */
   }
-  
+  #order{
+    width: 600px;
+    padding-right: 400px;
+    overflow-y: scroll;
+  }
   
   #star1{
     display: flex;
@@ -295,6 +303,11 @@
     margin-top: 40px;
     box-shadow: 0px 0px 9px;
     padding: 30px;
+  }
+
+  #order{
+    width: 600px;
+    overflow-y: scroll;
   }
   
   #ab1{
